--- a/Home Discord.html
+++ b/Home Discord.html
@@ -49,7 +49,7 @@
             <div class=image> 
                 <img src="../src/discord.png" width="600px">
             </div>
-
+		<div>My name is</div>
             </div>
         
     </div>
